@@ -9,3 +9,4 @@
 /todo/
 /pod2htmd.tmp
 /01mailrc.txt.gz
+/00whois.xml
