@@ -7,6 +7,7 @@ license             = Perl_5
 [MungeFile::WithData]
 :version = 0.003
 finder = :MainModule
+encoding = utf8
 
 [@Author::ETHER]
 :version = 0.019
@@ -22,9 +23,12 @@ Test::Warnings = 0
 HTTP::Tiny = 0
 Acme::CPANAuthors = 0.23
 Acme::CPANAuthors::Factory = 0
-Parse::CPAN::Authors = 0
+Parse::CPAN::Whois = 0
 Gravatar::URL = 0
 perl = 5.010
+Dist::Zilla = 5.001                                 ; TRIAL
+Dist::Zilla::Plugin::PodWeaver = 4.000              ; TRIAL
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.132962    ; TRIAL
 
 ; authordep Pod::Weaver::Section::Contributors
 
