@@ -6,5 +6,6 @@ transformer = List
 [-StopWords]
 
 [-Encoding]
+encoding = UTF-8
 
-;[Contributors]
+[Contributors]
